<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDataActivity"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/name"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:imeOptions="actionNext"
                android:hint="@string/name"
                />
            <EditText
                android:id="@+id/document"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:inputType="phone"
                android:imeOptions="actionNext"
                android:hint="@string/document"
                />

            <EditText
                android:id="@+id/address"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:imeOptions="actionNext"
                android:hint="@string/address"
                />

            <EditText
                android:id="@+id/city"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/city"
                />

            <EditText
                android:id="@+id/country"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:imeOptions="actionNext"
                android:hint="@string/country"
                />

            <EditText
                android:id="@+id/phone"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:inputType="phone"
                android:imeOptions="actionNext"
                android:hint="@string/phone"
                />

            <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:layout_margin="20dp"
                android:onClick="startNextActivity"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>




</LinearLayout>