<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NetworkActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="40dp"
            >

            <TextView
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/internet"
                android:textSize="10pt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/wifi"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="150dp">
            </ImageView>

            <TextView
                android:layout_margin="10dp"
                android:id="@+id/wifiText"
                android:gravity="center"
                tools:text="ON"
                android:textStyle="bold"
                android:textSize="10pt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                />

            <TextView
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/bluetooth"
                android:textSize="10pt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/bluetooth"
                android:layout_gravity="center"
                android:layout_width="150dp"
                android:layout_height="150dp">
            </ImageView>

            <TextView
                android:layout_margin="10dp"
                android:id="@+id/bluetoothText"
                android:gravity="center"
                tools:text="ON"
                android:textStyle="bold"
                android:textSize="10pt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <Button
                android:layout_margin="20dp"
                android:gravity="center"
                android:id="@+id/next"
                android:text="@string/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="startNextActivity"
                />



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>



</LinearLayout>